12-kube-1.5/backend-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: multitool-services
spec:
  selector:
    app: multitool
  ports:
  - protocol: TCP
    name: multitool
    port: 9002
    targetPort: 80
