12-kube-1.5/frontend-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-services
spec:
  selector:
    app: nginx
  ports:
  - protocol: TCP
    name: nginx
    port: 9001
    targetPort: 80
